--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-5" id="search">
+            <div class="col-3" id="search">
                 <h5 id="search-header"> Search for a City:</h5>
                 <form class="row">
                     <input class="form-control" id="search-bar" type="text" placeholder="City Name" aria-label="Search">
@@ -50,17 +50,10 @@
                         <p class="card-text">Austin</p>
                         <hr>
                         <p class="card-text">Chicago</p>
-                        <hr>
-                        <p class="card-text">Austin</p>
-                        <hr>
-                        <p class="card-text">Chicago</p>
-                        <hr>
-                        <p class="card-text">Austin</p>
-                        
                     </div>
                 </div>
             </div>
-            <div class="col-sm-7">
+            <div class="col-9">
                 <div class="row card" id="today">
                     <h2 class="card-title">Chicago</h2>
                     <p class="card-text">Temperature: </p>
@@ -68,15 +61,23 @@
                     <p class="card-text">Wind Speed: </p>
                     <p class="card-text">UV Index: </p>
                 </div>
-                <div id="forecast">
-                    <h2>5-Day Forecast:</h2>
-                    <div class="card five-day" id="day1">
-                        <h3>date</h3>
+                <div class="row" id="forecast">
+                    <h3 class="col-12">5-Day Forecast:</h3>
+                    <div class="col card five-day" id="day1">
+                        <h5 class="card-title date">10/23/20</h5>
                     </div>
-                    <div class="card five-day" id="day2"></div>
-                    <div class="card five-day" id="day3"></div>
-                    <div class="card five-day" id="day4"></div>
-                    <div class="card five-day" id="day5"></div>
+                    <div class="col card five-day" id="day2">
+                        <h5 class="card-title date">date</h5>
+                    </div>
+                    <div class="col card five-day" id="day3">
+                        <h5 class="card-title date">date</h5>
+                    </div>
+                    <div class="col card five-day" id="day4">
+                        <h5 class="card-title date">date</h5>
+                    </div>
+                    <div class="col card five-day" id="day5">
+                        <h5 class="card-title date">date</h5>
+                    </div>
                 </div>
             </div>
         </div>
