--- a/index.html
+++ b/index.html
@@ -55,35 +55,26 @@
             </div>
             <div class="col-9">
                 <div class="row card" id="today">
-                    <h2 class="card-title">Chicago</h2>
-                    <p class="card-text">Temperature: </p>
-                    <p class="card-text">Humidity: </p>
-                    <p class="card-text">Wind Speed: </p>
-                    <p class="card-text">UV Index: </p>
+                    <h2 class="card-title" id="name">City</h2>
+                    <p class="card-text" id="temp">Temperature: </p>
+                    <p class="card-text" id="humidity">Humidity: </p>
+                    <p class="card-text" id="wind">Wind Speed: </p>
+                    <p class="card-text" id="uv">UV Index: </p>
                 </div>
                 <div class="row" id="forecast">
                     <h3 class="col-12">5-Day Forecast:</h3>
-                    <div class="col card five-day" id="day1">
-                        <h5 class="card-title date">10/23/20</h5>
-                    </div>
-                    <div class="col card five-day" id="day2">
-                        <h5 class="card-title date">date</h5>
-                    </div>
-                    <div class="col card five-day" id="day3">
-                        <h5 class="card-title date">date</h5>
-                    </div>
-                    <div class="col card five-day" id="day4">
-                        <h5 class="card-title date">date</h5>
-                    </div>
-                    <div class="col card five-day" id="day5">
-                        <h5 class="card-title date">date</h5>
-                    </div>
+                    <div class="col card five-day" id="day1"></div>
+                    <div class="col card five-day" id="day2"></div>
+                    <div class="col card five-day" id="day3"></div>
+                    <div class="col card five-day" id="day4"></div>
+                    <div class="col card five-day" id="day5"></div>
                 </div>
             </div>
         </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
