updated styling and JS with functioning search history calls

--- a/index.html
+++ b/index.html
@@ -30,33 +30,13 @@
                     </button>
                 </form>
                 <div class="row">
-                    <div class="card" id="search-history">
-                        <p class="card-text">Austin</p>
-                        <hr>
-                        <p class="card-text">Chicago</p>
-                        <hr>
-                        <p class="card-text">Austin</p>
-                        <hr>
-                        <p class="card-text">Chicago</p>
-                        <hr>
-                        <p class="card-text">Austin</p>
-                        <hr>
-                        <p class="card-text">Chicago</p>
-                        <hr>
-                        <p class="card-text">Austin</p>
-                        <hr>
-                        <p class="card-text">Chicago</p>
-                        <hr>
-                        <p class="card-text">Austin</p>
-                        <hr>
-                        <p class="card-text">Chicago</p>
-                    </div>
+                    <div class="card" id="search-history"></div>
                 </div>
             </div>
             <div class="col-9">
                 <div class="row card" id="today">
                     <h2 class="card-title" id="name">City</h2>
-                    <p class="card-text" id="temp">Temperature: </p>
+                    <p class="card-text" id="temperature">Temperature: </p>
                     <p class="card-text" id="humidity">Humidity: </p>
                     <p class="card-text" id="wind">Wind Speed: </p>
                     <p class="card-text" id="uv">UV Index: </p>
